--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "groq": "^2.15.0",
     "next": "11.1.0",
     "next-sanity": "^0.4.0",
