--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "groq": "^2.15.0",
     "next": "11.1.0",
     "next-sanity": "^0.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
