--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^0.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0"
   },
