--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.2.0",
-    "react-player": "^2.9.0"
+    "react-player": "^2.9.0",
+    "screenfull": "^5.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.2",
