--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "groq": "^2.15.0",
-    "next": "11.1.0",
+    "next": "^11.1.0",
     "next-sanity": "^0.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -25,7 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^10.3.2",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
+    "eslint-config-next": "^11.1.0",
     "next-sitemap": "^1.6.164",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.7"
