--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "groq": "^2.15.0",
-    "next": "^12.0.7",
+    "next": "^12.0.8",
     "next-sanity": "^0.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,8 +24,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "^12.0.7",
+    "eslint": "^8.7.0",
+    "eslint-config-next": "^12.0.8",
     "next-sitemap": "^1.6.164",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
