--- a/web/package.json
+++ b/web/package.json
@@ -10,24 +10,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "groq": "^2.15.0",
-    "next": "^12.0.8",
-    "next-sanity": "^0.4.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "groq": "^2.33.2",
+    "next": "^12.3.1",
+    "next-sanity": "^0.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "^4.2.0",
-    "react-player": "^2.9.0",
-    "screenfull": "^5.1.0"
+    "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
+    "screenfull": "^6.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.7.0",
-    "eslint-config-next": "^12.0.8",
-    "next-sitemap": "^1.9.12",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "^12.3.1",
+    "next-sitemap": "^3.1.22",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
