New "stills" page

--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "groq": "^3.19.2",
+    "just-capitalize": "^3.2.0",
+    "just-shuffle": "^4.2.0",
     "next": "^14.0.2",
     "next-sanity": "^6.0.1",
     "react": "18.2.0",
@@ -22,7 +24,8 @@
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
-    "screenfull": "^6.0.2"
+    "screenfull": "^6.0.2",
+    "yet-another-react-lightbox": "^3.20.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
