--- a/studio/package.json
+++ b/studio/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0",
     "react-icons": "^4.2.0",
     "sanity-plugin-dashboard-widget-vercel": "^1.1.0",
+    "sanity-plugin-media": "^1.5.1",
     "sanity-plugin-order-documents": "^0.0.22",
     "styled-components": "^5.3.3"
   }
