--- a/studio/package.json
+++ b/studio/package.json
@@ -31,5 +31,8 @@
     "sanity-plugin-media": "^1.5.1",
     "sanity-plugin-order-documents": "^0.0.22",
     "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "@sanity/cli": "^3.1.4"
   }
 }
