--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,8 @@
     "just-shuffle": "^4.2.0",
     "next": "^14.0.2",
     "next-sanity": "^6.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
