--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^1.0.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
+    "clsx": "^2.1.1",
     "groq": "^3.19.2",
     "just-capitalize": "^3.2.0",
     "just-shuffle": "^4.2.0",
