--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,7 @@
     "groq": "^3.99.0",
     "just-capitalize": "^3.2.0",
     "just-shuffle": "^4.2.0",
-    "next": "^14.2.33",
+    "next": "14.2.35",
     "next-sanity": "^6.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
