Specify playwright config explicitly

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       run: bunx playwright install --with-deps chromium
 
     - name: Run Playwright tests
-      run: bunx playwright test
+      run: bunx playwright test --config=playwright.config.js
       env:
         NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ vars.NEXT_PUBLIC_SANITY_PROJECT_ID }}
         NEXT_PUBLIC_SANITY_DATASET: ${{ vars.NEXT_PUBLIC_SANITY_DATASET }}
