--- a/web/package.json
+++ b/web/package.json
@@ -35,11 +35,11 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
-    "autoprefixer": "^10.4.21",
+    "@tailwindcss/postcss": "^4.1.18",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.33",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^4.1.18"
   }
 }
