--- a/studio/package.json
+++ b/studio/package.json
@@ -7,32 +7,26 @@
   "author": "Boopack Digital <dev@bootpackdigital.com>",
   "license": "UNLICENSED",
   "scripts": {
+    "dev": "sanity dev",
     "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build",
+    "deploy": "sanity deploy"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.36.2",
-    "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.36.2",
-    "@sanity/dashboard": "^2.36.0",
-    "@sanity/default-layout": "^2.36.2",
-    "@sanity/default-login": "^2.36.2",
-    "@sanity/desk-tool": "^2.36.2",
-    "@sanity/google-maps-input": "^2.36.0",
-    "@sanity/vision": "^2.36.2",
+    "@sanity/vision": "^3.48.0",
     "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
-    "react-icons": "^4.2.0",
-    "sanity-plugin-dashboard-widget-vercel": "^1.1.0",
-    "sanity-plugin-media": "^1.5.1",
-    "sanity-plugin-order-documents": "^0.0.22",
-    "styled-components": "^5.3.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "sanity": "^3.48.0",
+    "sanity-plugin-media": "^2.3.2",
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
-    "@sanity/cli": "^3.1.4"
+    "@sanity/cli": "^3.48.0",
+    "@types/react": "^18.3.5"
   }
 }
